--- a/symfony/index.html
+++ b/symfony/index.html
@@ -1,7 +1,15 @@
-<pre>
-<?php
+<!DOCTYPE html>
+<html>
+<head>
+    <title> Symfony :: Coming Soon</title>
+</head>
+<body>
+    <code>
+    <?php
 
-   echo "Coming Soon";
+       echo "Coming Soon";
 
-?>
-</pre>
+    ?>
+    </code>
+</body>
+</html>
