Added new directory

--- a/symfony/index.html
+++ b/symfony/index.html
@@ -1,15 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title> Symfony :: Coming Soon</title>
+    <title>Symfony</title>
 </head>
 <body>
-    <code>
-    <?php
 
-       echo "Coming Soon";
-
-    ?>
-    </code>
 </body>
 </html>
